[package]
name = "discord2line"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = '0.12.4'
tokio = { version = '1.37.0', features = ['full'] }
serenity = { version = '0.12.1', default-features = false, features = [
    'client',
    'gateway',
    'model',
    'rustls_backend',
] }
dotenv = '0.15'
serde = { version = '1.0', features = ['derive'] }
serde_json = '1.0'
unicode-segmentation = "1.11.0"
emojis = "0.6.2"
